--- a/MyLeasing.Web/Views/Owners/Details.cshtml
+++ b/MyLeasing.Web/Views/Owners/Details.cshtml
@@ -74,71 +74,92 @@
 
 else
 {
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Neighborhood)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Rooms)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Stratum)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().IsAvailable)
-            </th>
-            <th>
-                Images
-            </th>
-            <th>
-                Contracts
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Properties)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Neighborhood)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rooms)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Stratum)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsAvailable)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PropertyImages.Count)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Contracts.Count)
-            </td>
-            <td>
-                <a asp-action="EditProperty" asp-route-id="@item.Id" class="btn btn-info">Edit</a> |
-                <a asp-action="DetailsProperty" asp-route-id="@item.Id" class="btn btn-warning">Details</a> |
-                <a asp-action="DeleteProperty" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
-        }
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Neighborhood)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Address)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Price)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Rooms)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Stratum)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().IsAvailable)
+                </th>
+                <th>
+                    Images
+                </th>
+                <th>
+                    Contracts
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Properties)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Neighborhood)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Price)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Rooms)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Stratum)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IsAvailable)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PropertyImages.Count)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Contracts.Count)
+                    </td>
+                    <td>
+                        <a asp-action="EditProperty" asp-route-id="@item.Id" class="btn btn-info">Edit</a> |
+                        <a asp-action="DetailsProperty" asp-route-id="@item.Id" class="btn btn-warning">Details</a> |
+                        <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog">Delete</button>
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
+}
+
+<partial name="_DeleteDialog"/>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script type="text/javascript">
+    	$(document).ready(function () {
+        	// Delete item
+        	var item_to_delete;
+
+        	$('.deleteItem').click((e) => {
+            	item_to_delete = e.currentTarget.dataset.id;
+        	});
+
+        	$("#btnYesDelete").click(function () {
+            	window.location.href = '/Owners/DeleteProperty/' + item_to_delete;
+        	});
+    	});
+    </script>
 }
