--- a/MyLeasing.Prism/MyLeasing.Prism/Views/LoginPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/LoginPage.xaml
@@ -20,8 +20,12 @@
             IsRunning="{Binding IsRunning}"
             VerticalOptions="CenterAndExpand"/>
         <Button
+            BackgroundColor="Navy"
+            CornerRadius="23"
             Command="{Binding LoginCommand}"
+            HeightRequest="46"
             IsEnabled="{Binding IsEnable}"
-            Text="Login"/>
+            Text="Login"
+            TextColor="White"/>
     </StackLayout>  
 </ContentPage>
