--- a/MyLeasing.Prism/MyLeasing.Prism/Views/PropertiesPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/PropertiesPage.xaml
@@ -18,6 +18,9 @@
                         <Frame
                             CornerRadius="10"
                             Margin="0,0,0,5">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding SelectPropertyCommand}"/>
+                            </Frame.GestureRecognizers>
                             <StackLayout>
                                 <ffimageloading:CachedImage
 	                                Grid.Column="0"
@@ -31,7 +34,6 @@
 	                                WidthRequest="100"/>
                                 <Grid>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
