--- a/MyLeasing.Prism/MyLeasing.Prism/Views/PropertiesPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/PropertiesPage.xaml
@@ -9,6 +9,7 @@
              Title="{Binding Title}">
     <StackLayout Padding="10">
         <ListView 
+            BackgroundColor="Transparent"
             HasUnevenRows="True"
             SeparatorVisibility="None"
             ItemsSource="{Binding Properties}">
@@ -17,14 +18,15 @@
                     <ViewCell>
                         <Frame
                             CornerRadius="10"
-                            Margin="0,0,0,5">
+                            Margin="0,0,0,10">
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding SelectPropertyCommand}"/>
                             </Frame.GestureRecognizers>
                             <StackLayout>
                                 <ffimageloading:CachedImage
-	                                Grid.Column="0"
+                                    Aspect="AspectFit"
 	                                Source="{Binding FirstImage}"
+                                    HeightRequest="200"
 	                                LoadingPlaceholder= "LoaderImage"
 	                                ErrorPlaceholder= "ErrorImage"
 	                                CacheDuration= "50"
