--- a/MyLeasing.Prism/MyLeasing.Prism/Views/LoginPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/LoginPage.xaml
@@ -2,30 +2,54 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
+             xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="MyLeasing.Prism.Views.LoginPage"
              Title="{Binding Title}">
-    <StackLayout Padding="10">
-        <Label Text="Email" />
-        <Entry 
-            Keyboard="Email"
-            Placeholder="Enter your Email..."
-            Text="{Binding Email}"/>
-        <Label Text="Password" />
-        <Entry 
-            IsPassword="True"
-            Placeholder="Enter your Password..."
-            Text="{Binding Password}"/>
-        <ActivityIndicator
-            IsRunning="{Binding IsRunning}"
-            VerticalOptions="CenterAndExpand"/>
-        <Button
-            BackgroundColor="Navy"
-            CornerRadius="23"
-            Command="{Binding LoginCommand}"
-            HeightRequest="46"
-            IsEnabled="{Binding IsEnable}"
-            Text="Login"
-            TextColor="White"/>
-    </StackLayout>  
+    <ScrollView>
+        <AbsoluteLayout>
+            <StackLayout 
+                AbsoluteLayout.LayoutBounds="0,0,1,1"
+            	AbsoluteLayout.LayoutFlags="All"
+                Padding="10">
+                <Image 
+                    Margin="20"
+                    Source="logo"
+                    WidthRequest="230"/>
+                <Label Text="Email" />
+                <Entry 
+                    Keyboard="Email"
+                    Placeholder="Enter your Email..."
+                    Text="{Binding Email}"/>
+                <Label Text="Password" />
+                <Entry 
+                    IsPassword="True"
+                    Placeholder="Enter your Password..."
+                    Text="{Binding Password}"/>
+                <Button
+                    BackgroundColor="Navy"
+                    CornerRadius="23"
+                    Command="{Binding LoginCommand}"
+                    HeightRequest="46"
+                    IsEnabled="{Binding IsEnable}"
+                    Text="Login"
+                    TextColor="White"
+                    VerticalOptions="EndAndExpand"/>
+            </StackLayout>
+            <busyindicator:SfBusyIndicator  
+                	AnimationType="RollingBall"
+                	AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
+                	AbsoluteLayout.LayoutFlags="All"
+                	BackgroundColor="Transparent"
+                	HorizontalOptions="Center"
+                	TextColor="Navy"
+                	IsVisible="{Binding IsRunning}"
+                	Title="Loading..."
+                	VerticalOptions="Center"
+                	ViewBoxWidth="80"
+                	ViewBoxHeight="80" />
+
+        </AbsoluteLayout>
+    </ScrollView>
+     
 </ContentPage>
