reset password, reovery password, create user

--- a/MyLeasing.Web/Views/Account/Register.cshtml
+++ b/MyLeasing.Web/Views/Account/Register.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
 
-            <partial name="_User"/>
+            <partial name="_User" />
 
             <div class="form-group">
                 <label asp-for="RoleId" class="control-label"></label>
@@ -45,6 +45,13 @@
         </form>
     </div>
 </div>
+
+<div class="text-success">
+    <p>
+        @ViewBag.Message
+    </p>
+</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
