--- a/MyLeasing.Web/Views/Owners/Details.cshtml
+++ b/MyLeasing.Web/Views/Owners/Details.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
+<br />
 
 <div>
     <h4>Owner</h4>
@@ -143,23 +144,23 @@ else
     </table>
 }
 
-<partial name="_DeleteDialog"/>
+<partial name="_DeleteDialog" />
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
     <script type="text/javascript">
-    	$(document).ready(function () {
-        	// Delete item
-        	var item_to_delete;
+        $(document).ready(function () {
+            // Delete item
+            var item_to_delete;
 
-        	$('.deleteItem').click((e) => {
-            	item_to_delete = e.currentTarget.dataset.id;
-        	});
+            $('.deleteItem').click((e) => {
+                item_to_delete = e.currentTarget.dataset.id;
+            });
 
-        	$("#btnYesDelete").click(function () {
-            	window.location.href = '/Owners/DeleteProperty/' + item_to_delete;
-        	});
-    	});
+            $("#btnYesDelete").click(function () {
+                window.location.href = '/Owners/DeleteProperty/' + item_to_delete;
+            });
+        });
     </script>
 }
