--- a/MyLeasing.Web/Views/Home/DetailsPropertyOwner.cshtml
+++ b/MyLeasing.Web/Views/Home/DetailsPropertyOwner.cshtml
@@ -5,9 +5,8 @@
 }
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
-<br />
-
 <h2>Property</h2>
+
 <div class="row">
     <div class="col-md-6">
         <div>
@@ -39,7 +38,7 @@
                     @Html.DisplayFor(model => model.Owner.User.Email)
                 </dd>
                 <dt>
-                    Phone Number
+                    @Html.DisplayNameFor(model => model.Owner.User.PhoneNumber)
                 </dt>
                 <dd>
                     @Html.DisplayFor(model => model.Owner.User.PhoneNumber)
@@ -100,58 +99,73 @@
                 <dd>
                     @Html.DisplayFor(model => model.Contracts.Count)
                 </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Remarks)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Remarks)
+                </dd>
             </dl>
         </div>
     </div>
 </div>
 <div>
-    <a asp-action="EditProperty" asp-route-id="@Model.Id" class="btn btn-info">Edit</a>
+    <a asp-action="EditProperty" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
     <a asp-action="AddImage" asp-route-id="@Model.Id" class="btn btn-primary">Add Image</a>
-    <a asp-action="AddContract" asp-route-id="@Model.Id" class="btn btn-success">Add Contract</a>
-    <a asp-action="Details" asp-route-id="@Model.Owner.Id" class="btn btn-default">Back to Owner</a>
+    <a asp-action="MyProperties" class="btn btn-success">Back to My Properties</a>
 </div>
+<hr />
 <div class="row">
     <div class="col-md-3">
         <div>
-            <h4>Images</h4>
             @if (Model.PropertyImages.Count == 0)
             {
                 <h5>Not images added yet.</h5>
             }
             else
             {
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.PropertyImages.FirstOrDefault().ImageUrl)
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.PropertyImages)
-                        {
-                            <tr>
-                                <td>
-                                    @if (!string.IsNullOrEmpty(item.ImageUrl))
-                                    {
-                                        <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:200px;height:200px;max-width: 100%; height: auto;" />
-                                    }
-                                </td>
-                                <td>
-                                    <button data-id="@item.Id" class="btn btn-danger deleteImage" data-toggle="modal" data-target="#deleteDialog">Delete</button>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Images</h3>
+                            </div>
+                            <div class="panel-body">
+                                <table class="table table-hover table-responsive table-striped" id="MyTableImages">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                @Html.DisplayNameFor(model => model.PropertyImages.FirstOrDefault().ImageUrl)
+                                            </th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var item in Model.PropertyImages)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @if (!string.IsNullOrEmpty(item.ImageUrl))
+                                                    {
+                                                        <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:200px;height:200px;max-width: 100%; height: auto;" />
+                                                    }
+                                                </td>
+                                                <td>
+                                                    <button data-id="@item.Id" class="btn btn-danger deleteImage" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             }
         </div>
     </div>
     <div class="col-md-9">
         <div>
-            <h4>Contracts</h4>
             @if (Model.Contracts.Count == 0)
             {
                 <h5>Not contracts added yet.</h5>
@@ -165,7 +179,7 @@
                                 <h3 class="panel-title">Contracts</h3>
                             </div>
                             <div class="panel-body">
-                                <table class="table table-hover table-responsive table-striped" id="MyTable">
+                                <table class="table table-hover table-responsive table-striped" id="MyTableContracts">
                                     <thead>
                                         <tr>
                                             <th>
@@ -212,9 +226,7 @@
                                                     @Html.DisplayFor(modelItem => item.IsActive)
                                                 </td>
                                                 <td>
-                                                    <a asp-action="EditContract" class="btn btn-default" asp-route-id="@item.Id"><i class="glyphicon glyphicon-pencil"></i> </a>
                                                     <a asp-action="DetailsContract" class="btn btn-default" asp-route-id="@item.Id"><i class="glyphicon glyphicon-list"> </i> </a>
-                                                    <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
                                                 </td>
                                             </tr>
                                         }
@@ -226,39 +238,50 @@
                 </div>
             }
         </div>
-
-        <partial name="_DeleteDialog" />
-
-        @section Scripts {
-            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-            <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-
-            <script type="text/javascript">
-                $(document).ready(function () {
-                    $('#MyTable').DataTable();
-                    // Delete item
-                    var item_to_delete;
-                    var action_to_delete;
-
-                    $('.deleteImage').click((e) => {
-                        item_to_delete = e.currentTarget.dataset.id;
-                        action_to_delete = 1;
-                    });
-
-                    $('.deleteContract').click((e) => {
-                        item_to_delete = e.currentTarget.dataset.id;
-                        action_to_delete = 2;
-                    });
-
-                    $("#btnYesDelete").click(function () {
-                        if (action_to_delete == 1) {
-                            window.location.href = '/Owners/DeleteImage/' + item_to_delete;
-                        } else {
-                            window.location.href = '/Owners/DeleteContract/' + item_to_delete;
-                        }
-                    });
-                });
-            </script>
-        }
-
     </div>
+</div>
+
+<!--Delete Item-->
+<div class="modal fade" id="deleteDialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete Item</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Do you want to delete the record?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger" id="btnYesDelete">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+
+    <script type="text/javascript">
+    	$(document).ready(function () {
+
+        	$('#MyTableImages').DataTable();
+        	$('#MyTableContracts').DataTable();
+
+        	// Delete item
+        	var item_to_delete;
+
+        	$('.deleteImage').click((e) => {
+            	item_to_delete = e.currentTarget.dataset.id;
+        	});
+
+        	$("#btnYesDelete").click(function () {
+            	window.location.href = '/Home/DeleteImage/' + item_to_delete;
+        	});
+    	});
+    </script>
+}
