--- a/MyLeasing.Web/Views/Home/MyProperties.cshtml
+++ b/MyLeasing.Web/Views/Home/MyProperties.cshtml
@@ -5,10 +5,10 @@
 }
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
-<br />
+<h2>Owner</h2>
 
 <div>
-    <h4>Owner</h4>
+    <h4>Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -36,13 +36,7 @@
             @Html.DisplayFor(model => model.User.Email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.User.Address)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.User.Address)
-        </dd>
-        <dt>
-            Phone Number
+            @Html.DisplayNameFor(model => model.User.PhoneNumber)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.User.PhoneNumber)
@@ -62,17 +56,14 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-info">Edit</a> |
-    <a asp-action="AddProperty" asp-route-id="@Model.Id" class="btn btn-primary">Add Property</a> |
-    <a asp-action="Index" class="btn btn-default">Back to List</a>
+    <a asp-action="AddProperty" asp-route-id="@Model.Id" class="btn btn-primary">Add Property</a>
+    <a asp-action="Index" class="btn btn-success">Back to Home</a>
 </div>
-<br />
-<h2>Properties</h2>
+<hr />
 @if (Model.Properties.Count == 0)
 {
-    <h5>Not properties added yet</h5>
+    <h5>Not properties added yet.</h5>
 }
-
 else
 {
     <div class="row">
@@ -86,6 +77,9 @@ else
                         <thead>
                             <tr>
                                 <th>
+                                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().PropertyType.Name)
+                                </th>
+                                <th>
                                     @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Neighborhood)
                                 </th>
                                 <th>
@@ -93,6 +87,9 @@ else
                                 </th>
                                 <th>
                                     @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Price)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().SquareMeters)
                                 </th>
                                 <th>
                                     @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Rooms)
@@ -117,6 +114,9 @@ else
                             {
                                 <tr>
                                     <td>
+                                        @Html.DisplayFor(modelItem => item.PropertyType.Name)
+                                    </td>
+                                    <td>
                                         @Html.DisplayFor(modelItem => item.Neighborhood)
                                     </td>
                                     <td>
@@ -124,6 +124,9 @@ else
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Price)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SquareMeters)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Rooms)
@@ -142,7 +145,7 @@ else
                                     </td>
                                     <td>
                                         <a asp-action="EditProperty" class="btn btn-default" asp-route-id="@item.Id"><i class="glyphicon glyphicon-pencil"></i> </a>
-                                        <a asp-action="DetailsProperty" class="btn btn-default" asp-route-id="@item.Id"><i class="glyphicon glyphicon-list"> </i> </a>
+                                        <a asp-action="DetailsPropertyOwner" class="btn btn-default" asp-route-id="@item.Id"><i class="glyphicon glyphicon-list"> </i> </a>
                                         <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
                                     </td>
                                 </tr>
@@ -162,18 +165,19 @@ else
     <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
     <script type="text/javascript">
-        $(document).ready(function () {
-            $('#MyTable').DataTable();
-            // Delete item
-            var item_to_delete;
+    	$(document).ready(function () {
+        	$('#MyTable').DataTable();
 
-            $('.deleteItem').click((e) => {
-                item_to_delete = e.currentTarget.dataset.id;
-            });
+        	// Delete item
+        	var item_to_delete;
 
-            $("#btnYesDelete").click(function () {
-                window.location.href = '/Owners/DeleteProperty/' + item_to_delete;
-            });
-        });
+        	$('.deleteItem').click((e) => {
+            	item_to_delete = e.currentTarget.dataset.id;
+        	});
+
+        	$("#btnYesDelete").click(function () {
+            	window.location.href = '/Home/DeleteProperty/' + item_to_delete;
+        	});
+    	});
     </script>
 }
