--- a/MyLeasing.Prism/MyLeasing.Prism/Views/ContractPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/ContractPage.xaml
@@ -4,6 +4,7 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="MyLeasing.Prism.Views.ContractPage"
+             BackgroundColor="{StaticResource colorBackgroud}"
              Title="{Binding Title}">
     <ScrollView>
         <StackLayout
