--- a/MyLeasing.Prism/MyLeasing.Prism/Views/ContractsPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/ContractsPage.xaml
@@ -4,7 +4,8 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="MyLeasing.Prism.Views.ContractsPage"
-              IconImageSource="ic_action_list_alt"
+             IconImageSource="ic_action_list_alt"
+             BackgroundColor="{StaticResource colorBackgroud}"
              Title="{Binding Title}">
     <StackLayout
         Padding="10">
