--- a/MyLeasing.Prism/MyLeasing.Prism/Views/PropertyPage.xaml
+++ b/MyLeasing.Prism/MyLeasing.Prism/Views/PropertyPage.xaml
@@ -5,6 +5,7 @@
          	 xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"        	 
          	 xmlns:syncfusion="clr-namespace:Syncfusion.SfRotator.XForms;assembly=Syncfusion.SfRotator.XForms"
              x:Class="MyLeasing.Prism.Views.PropertyPage"
+             BackgroundColor="{StaticResource colorBackgroud}"
              IconImageSource="ic_action_details"
              Title="{Binding Title}">
     <ScrollView>
